Research content working. Fixed mobile navigation menus

--- a/pug/banner.pug
+++ b/pug/banner.pug
@@ -1,5 +1,5 @@
 section#banner
   header
-    h2!= md(site.web.welcome.title)
-    p!= md(site.web.welcome.summary)
+    h2!= md(site.flavor.welcome.title)
+    p!= md(site.flavor.welcome.details)
   p!= md(site.basics.summary)
