--- a/sass/main.scss
+++ b/sass/main.scss
@@ -520,6 +520,24 @@
 		}
 	}
 
+
+/* Badges */
+
+		.badge {
+				color: #fff;
+				background-color: #df7366;
+				margin-left: 0.5em;
+		    display: inline-block;
+		    padding: .25em .4em;
+		    font-size: 75%;
+		    font-weight: 700;
+		    line-height: 1;
+		    text-align: center;
+		    white-space: nowrap;
+		    vertical-align: baseline;
+		    border-radius: .25rem;
+		}
+
 /* Form */
 
 	form {
