--- a/sass/main.scss
+++ b/sass/main.scss
@@ -981,9 +981,9 @@
 		}
 	}
 
-/* Banner */
+/* Welcome */
 
-	#banner {
+	#welcome {
 		background: #fff;
 		text-align: center;
 		padding: 4.5em 0 4.5em 0;
@@ -1254,9 +1254,9 @@
 				}
 			}
 
-		/* Banner */
+		/* Welcome */
 
-			#banner {
+			#welcome {
 				padding-left: 2em;
 				padding-right: 2em;
 			}
@@ -1641,9 +1641,9 @@
 				display: none;
 			}
 
-		/* Banner */
+		/* Welcome */
 
-			#banner {
+			#welcome {
 				padding: 3em 2em 3em 2em;
 			}
 
