More content on example

--- a/pug/content.pug
+++ b/pug/content.pug
@@ -38,7 +38,7 @@ mixin contentSection(section)
           footer
             a.button( href=profile.url )
               +icon(network)
-              ='More on ' + section.network
+              ='More on ' + profile.network
 
       when 'publications'
         section.row.gtr-50
