--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1018,7 +1018,7 @@
 	#welcome {
 		background: #fff;
 		text-align: center;
-		padding: 4.5em 0 4.5em 0;
+		padding: 4.5em 2em 4.5em 2em;
 		margin-bottom: 0;
 
 		header {
@@ -1295,13 +1295,6 @@
 					padding-left: 2em;
 					padding-right: 2em;
 				}
-			}
-
-		/* Welcome */
-
-			#welcome {
-				padding-left: 2em;
-				padding-right: 2em;
 			}
 
 		/* Footer */
@@ -1676,7 +1669,7 @@
 				}
 			}
 
-			/*body.homepage {
+			body.homepage {
 				#header {
 					min-height: 0;
 					padding: 5.5em 0 5em 0;
@@ -1690,7 +1683,7 @@
 						font-size: 2.5em;
 					}
 				}
-			}*/
+			}
 
 		/* Nav */
 
