--- a/pug/header.pug
+++ b/pug/header.pug
@@ -18,7 +18,7 @@
         a(href='/') Home
       if site.portfolio
         li
-          a Portfolio
+          a Work
           ul
             - let sections = _.groupBy(site.portfolio, page => page.category)
             
