Updated curse icon, minor changes

--- a/pug/footer.pug
+++ b/pug/footer.pug
@@ -8,7 +8,7 @@
           p!= md(site.flavor.contact.details)
           ul.icons
             li
-              a.icon(href= 'mailto:' + site.basics.email)
+              a.icon(href= '/resume')
                 +icon('email')
             
             for profile in site.basics.profiles
