--- a/pug/header.pug
+++ b/pug/header.pug
@@ -5,7 +5,7 @@
         h1
           a#logo(href='/')= site.basics.name
         hr
-        p= site.basics.label
+        p!= site.basics.label
       footer
         a.button.circled.scrolly(href='#welcome') About
     else
