--- a/pug/welcome.pug
+++ b/pug/welcome.pug
@@ -2,4 +2,4 @@ section#welcome
   header
     h2!= md(site.flavor.welcome.title)
     p!= md(site.flavor.welcome.details)
-  p!= md(site.basics.summary)
+  != site.basics.summary
