--- a/sass/icomoon.scss
+++ b/sass/icomoon.scss
@@ -3,8 +3,8 @@
   width: 1em;
   height: 1em;
   stroke-width: 0;
-  stroke: currentColor;
-  fill: currentColor;
+  stroke: currentColor !important;
+  fill: currentColor !important;
 }
 
 .icon-arrow {
