--- a/sass/main.scss
+++ b/sass/main.scss
@@ -329,6 +329,13 @@
 			line-height: 1.5em;
 			text-align: inherit;
 		}
+
+		img {
+			display:block;
+			float: center;
+			margin: -30px auto 0px;
+			height: 170px;
+		}
 	}
 
 	footer {
